--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,10 @@ local.properties
 .classpath
 .settings/
 .loadpath
+.idea/
+gen/
+out/
+*.iml
 
 # External tool builders
 .externalToolBuilders/
